# grepbot

./: .env.example  Cargo.toml  Dockerfile  README.md  license.md
src/: command.rs  config.rs  grep.rs  handler.rs  help.md  main.rs  message.rs  syntax.md  usage.md
